#  Copyright (c) 2020 SBA - MIT License

[metadata]
name = qtimgren
classifiers=
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 3 - Alpha

    # Indicate who your project is intended for
    Intended Audience :: End Users/Desktop
    Environment :: X11 Applications :: Qt

    # Pick your license as you wish (should match "license" above)
    License :: OSI Approved :: MIT License

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

license = MIT
author = SBA
author_email = s-ball@laposte.net
description = GUI over the pyimgren package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/s-ball/QtImgren

[options]
packages= qtimgren
python_requires = >=3.5
install_requires = pyimgren>=0.8
                   PySide2>=5.12
setup_requires = setuptools>=42
                 setuptools_scm>=3.4
